[package]
name = "dptran"
version = "2.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A tool to run DeepL translations on command line written by Rust."
license = "MIT"
edition = "2021"
default-run = "dptran"
repository = "https://github.com/yotiosoft/dptran"
categories = ["text-processing", "localization", "internationalization", "command-line-interface", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = { version = "0.4.44" }
serde = { version = "^1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }

confy = { version = "0.5.1", optional = true }
clap = { version = "4.1.4", features = ["derive"], optional = true }
atty = { version = "0.2.14", optional = true }
md5 = { version = "0.7.0", optional = true }

[features]
default = ["curl", "serde", "serde_json", "confy", "clap", "atty", "md5"]
lib = ["curl", "serde", "serde_json"]

[lib]
name = "dptran"
required-features = ["lib"]

[[bin]]
name = "dptran"
required-features = ["default"]
