[package]
name = "dptran"
version = "2.2.1"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A tool to run DeepL translations on command line written by Rust."
license = "MIT OR Apache-2.0"
edition = "2021"
default-run = "dptran"
repository = "https://github.com/yotiosoft/dptran"
categories = ["text-processing", "localization", "internationalization", "command-line-interface", "api-bindings"]
documentation = "https://docs.rs/dptran"
homepage = "https://dptran.yotiosoft.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = { version = "0.4.44" }
serde = { version = "^1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }

confy = { version = "0.6.1", optional = true }
clap = { version = "4.1.4", features = ["derive"], optional = true }
atty = { version = "0.2.14", optional = true }
md5 = { version = "0.7.0", optional = true }
unicode-bidi = { version = "0.3.18", optional = true }

[features]
default = ["confy", "clap", "atty", "md5", "unicode-bidi"]
app = ["confy", "clap", "atty", "md5", "unicode-bidi"]      # for compatibility with the previous version (- v2.0.0)

# Use --no-default-features to disable default features
[lib]
name = "dptran"

[[bin]]
name = "dptran"
